--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/_02_nested_loops/_3_for_loop_gauntlet/NestedLoops.java=UTF-8
+encoding//src/_03_method_writing/_2_happy_pet/HappyPet.java=UTF-8
